<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_screen" translatable="false">Main_Screen</string>

    <!-- Strings used for MainScreenActivity -->
    <string name="number0" translatable="false">0</string>
    <string name="number1" translatable="false">1</string>
    <string name="number2" translatable="false">2</string>
    <string name="number3" translatable="false">3</string>
    <string name="number4" translatable="false">4</string>
    <string name="number5" translatable="false">5</string>
    <string name="number6" translatable="false">6</string>
    <string name="number7" translatable="false">7</string>
    <string name="number8" translatable="false">8</string>
    <string name="number9" translatable="false">9</string>
    <string name="noNumber" translatable="false"> </string>
    <string name="turnOn">Turn on the oven</string>
    <string name="turnOff">Turn off the oven</string>
    <string name="settings" translatable="false">settings</string>
    <string name="settingsIcon" translatable="false">settings icon</string>
    <string name="techSupport" translatable="false">tech support</string>
    <string name="techSupportIcon" translatable="false">tech support icon</string>
    <string name="ovenIcon" translatable="false">oven icon</string>
    <string name="stove_info">Press on a stove to set temperature\n</string>
    <string name="tts_stove">You have set the temperature to </string>
    <string name="tts_stove_off">You have turned off the </string>
    <string name="tts_stove_middle"> for the </string>
    <string name="topLeft"> top left </string>
    <string name="topRight"> top right </string>
    <string name="bottomLeft"> bottom left</string>
    <string name="bottomRight"> bottom right</string>
    <string name="tts_stove_end"> stove</string>
    <string name="timer_not_title">Timer end</string>
    <string name="timer_not_desc">The timer has ended</string>
    <string name="preheat_not_title">Oven Preheated</string>
    <string name="preheat_not_desc">The oven is preheated</string>
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->

    <!-- Strings used for SettingsActivity -->
    <string name="English">English</string>
    <string name="Greek">Greek</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="voiceCommands">Voice Commands</string>
    <string name="voiceResponses">Voice Responses</string>
    <string name="notificationsSwitch">Notifications</string>
    <string name="desc_image_voice_commands" translatable="false">image of voice commands</string>
    <string name="desc_image_voice_response" translatable="false">image of voice response</string>
    <string name="desc_image_notifications" translatable="false">image of notifications</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>

    <string-array name="language_names">
        <item name="program_name1">@string/English</item>
        <item name="program_name1">@string/Greek</item>
    </string-array>

    <string-array name="theme_names">
        <item name="program_name1">@string/Light</item>
        <item name="program_name1">@string/Dark</item>
    </string-array>
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->

    <!-- Strings used for ProgramActivity -->
    <string-array name="program_names">
        <item name="program_name1">@string/light</item>
        <item name="program_name1">@string/defrostPlus</item>
        <item name="program_name1">@string/fanBake</item>
        <item name="program_name1">@string/bake</item>
        <item name="program_name1">@string/fanForced</item>
        <item name="program_name1">@string/pastryPlus</item>
        <item name="program_name1">@string/fanGrill</item>
        <item name="program_name1">@string/grill</item>
        <item name="program_name1">@string/pyrolytic</item>
    </string-array>

    <string name="light">Light</string>
    <string name="defrostPlus">Defrost Plus</string>
    <string name="fanForced">Fan Forced</string>
    <string name="fanBake">Fan Bake</string>
    <string name="bake">Bake</string>
    <string name="pastryPlus">Pastry Plus</string>
    <string name="fanGrill">Fan Grill</string>
    <string name="grill">Grill</string>
    <string name="pyrolytic">Pyrolytic Self-Clean</string>

    <string-array name="program_description">
        <item name="program_desc1">@string/program_desc_light</item>
        <item name="program_desc2">@string/program_defrost_plus</item>
        <item name="program_desc3">@string/program_fan_bake</item>
        <item name="program_desc4">@string/program_bake</item>
        <item name="program_desc5">@string/program_fan_forced</item>
        <item name="program_desc6">@string/program_pastry_plus</item>
        <item name="program_desc7">@string/program_fan_grill</item>
        <item name="program_desc8">@string/program_grill</item>
        <item name="program_desc9">@string/program_pyrolytic</item>
    </string-array>

    <string name="program_desc_light">LIGHT: Turns on the oven light.</string>
    <string name="program_defrost_plus">DEFROST PLUS: Defrosts properly frozen food.</string>
    <string name="program_fan_forced">FAN FORCED: Turns on the fan. This function provides even heat distribution and allows you to cook different foods at the same time.</string>
    <string name="program_fan_bake">FAN BAKE: Turns on the fan and heating elements. This function is ideal for bakery.</string>
    <string name="program_bake">BAKE: Turns on top and bottom heating elements. This function is ideal for traditional roasting (beef, lamb, etc) and baking.</string>
    <string name="program_pastry_plus">PASTRY PLUS: Turns on the bottom heating element with the fan. This function is ideal for tarts and pastries.</string>
    <string name="program_fan_grill">FAN GRILL: Turns on the grill with the fan. This function is ideal for cooking thick food items, whole pieces such as roast pork, poultry, etc.</string>
    <string name="program_grill">GRILL: Turns on the grill. This function is ideal for grills, kebabs and gratin dishes.</string>
    <string name="program_pyrolytic">PYROLYTIC SELF-CLEAN: Cleans the oven.</string>



    <string name="okButton">OK</string>
    <string name="minTempText" translatable="false">150</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="temperature">Temperature</string>
    <string name="title_select_prog">Select a program</string>
    <string name="turn_off">Turn off</string>
    <string name="change_settings">Change Settings</string>
    <string name="program_icon">program icon</string>
    <string name="oven_icon">oven icon</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="set_timer">Set timer</string>
    <string name="arrow" translatable="false"><![CDATA[->]]></string>
    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->

    <!-- Strings used for TechSupportActivity -->
    <string name="textSupport">If you have any problem do not hesitate to contact us at: 0800 242 437
        \n\nFor more information about the product visit corresponding pages (use buttons bellow):</string>
    <string name="stove">Stove</string>
    <string name="oven">Oven</string>
    <string name="back_icon">back icon</string>

    <string name="tts_program">Select a program for the oven</string>
    <string name="tts_oven_status">You have turned on the oven in the</string>
    <string name="tts_oven_status_middle">at</string>
    <string name="tts_oven_status_end">degrees Celsius</string>
    <string name="tts_oven_off">The oven is turned off</string>
    <string name="indicator_for_knob">indicator for knob</string>
</resources>