<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/programSelector"
        android:layout_width="329dp"
        android:layout_height="50dp"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/techSupport"
        app:layout_constraintStart_toStartOf="@+id/listview_program"
        app:layout_constraintTop_toTopOf="@+id/techSupport" />

    <ImageButton
        android:id="@+id/techSupport"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/techSupportIcon"
        android:scaleType="centerInside"
        android:src="@drawable/support_blue"
        android:text="@string/techSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/settingsIcon"
        android:scaleType="centerInside"
        android:src="@drawable/back_arrow"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/listview_program"
        android:layout_width="450dp"
        android:layout_height="300dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        tools:layout_editor_absoluteX="378dp"
        tools:layout_editor_absoluteY="421dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelecProg"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/companyBlue"
        android:text="@string/okButton"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/listview_program"
        app:layout_constraintStart_toStartOf="@+id/listview_program"
        app:layout_constraintTop_toBottomOf="@+id/listview_program" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minusTemp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/circled_button"
        android:backgroundTint="@color/companyBlue"
        android:text="@string/minus"
        android:gravity="center"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/textTitleTemp"
        app:layout_constraintTop_toBottomOf="@+id/textTitleTemp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusTemp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/circled_button"
        android:backgroundTint="@color/companyBlue"
        android:text="@string/plus"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/minusTemp"
        app:layout_constraintEnd_toEndOf="@+id/textTitleTemp"
        app:layout_constraintTop_toTopOf="@+id/minusTemp" />

    <TextView
        android:id="@+id/textTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minTempText"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/minusTemp"
        app:layout_constraintEnd_toStartOf="@+id/plusTemp"
        app:layout_constraintStart_toEndOf="@+id/minusTemp"
        app:layout_constraintTop_toTopOf="@+id/minusTemp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textTitleTemp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/selectProgramText"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/listview_program" />

    <TextView
        android:id="@+id/selectProgramText"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/title_select_prog"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/programSelector"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/programSelector" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/selectProgramText"
        app:layout_constraintStart_toEndOf="@+id/selectProgramText"
        app:layout_constraintTop_toTopOf="@+id/selectProgramText" />

    <NumberPicker
        android:id="@+id/timer_hour"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        app:layout_constraintStart_toStartOf="@+id/minusTemp"
        app:layout_constraintTop_toBottomOf="@+id/hourText" />

    <NumberPicker
        android:id="@+id/timer_minutes"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="@+id/plusTemp"
        app:layout_constraintTop_toBottomOf="@+id/minutesText" />

    <TextView
        android:id="@+id/hourText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hour"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/timer_hour"
        app:layout_constraintStart_toStartOf="@+id/timer_hour"
        app:layout_constraintTop_toBottomOf="@+id/setTimerText" />

    <TextView
        android:id="@+id/minutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/timer_minutes"
        app:layout_constraintStart_toStartOf="@+id/timer_minutes"
        app:layout_constraintTop_toTopOf="@+id/hourText" />

    <TextView
        android:id="@+id/setTimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_timer"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/plusTemp"
        app:layout_constraintStart_toStartOf="@+id/minusTemp"
        app:layout_constraintTop_toBottomOf="@+id/textTemp" />




</androidx.constraintlayout.widget.ConstraintLayout>