<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/techSupport"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/techSupportIcon"
        android:scaleType="centerInside"
        android:src="@drawable/support_blue"
        android:text="@string/techSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/back_icon"
        android:scaleType="centerInside"
        android:src="@drawable/back_arrow"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.smartkitchen.KnobController
        android:id="@+id/knob_controller"
        android:layout_width="420dp"
        android:layout_height="400dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSelectStoveValue"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/companyBlue"
        android:text="@string/turnOn"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="@+id/knob_controller"
        app:layout_constraintStart_toStartOf="@+id/knob_controller"
        app:layout_constraintTop_toBottomOf="@+id/knob_controller" />

</androidx.constraintlayout.widget.ConstraintLayout>
