<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingscreen">

    <TextView
        android:id="@+id/textLanguageGreek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="295dp"
        android:layout_marginTop="90dp"
        android:text="@string/language"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textThemeDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/theme"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textLanguageGreek"
        app:layout_constraintTop_toBottomOf="@+id/textLanguageGreek" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/voiceResponsesSwitch"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/voiceResponses"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textThemeDark"
        app:layout_constraintTop_toBottomOf="@+id/textThemeDark" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationSwitch"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/notificationsSwitch"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/voiceResponsesSwitch"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/voiceResponsesSwitch"
        app:layout_constraintTop_toBottomOf="@+id/voiceResponsesSwitch" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="481dp" />

    <ImageView
        android:id="@+id/imageVoiceResponse"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/desc_image_voice_response"
        app:layout_constraintBottom_toBottomOf="@+id/voiceResponsesSwitch"
        app:layout_constraintEnd_toEndOf="@+id/theme_spinner"
        app:layout_constraintTop_toTopOf="@+id/voiceResponsesSwitch"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/mute_sound" />

    <ImageView
        android:id="@+id/imageNotification"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/desc_image_notifications"
        app:layout_constraintBottom_toBottomOf="@+id/notificationSwitch"
        app:layout_constraintEnd_toEndOf="@+id/imageVoiceResponse"
        app:layout_constraintStart_toStartOf="@+id/imageVoiceResponse"
        app:layout_constraintTop_toTopOf="@+id/notificationSwitch"
        app:srcCompat="@drawable/mute_bell" />

    <ImageButton
        android:id="@+id/techSupport"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/techSupportIcon"
        android:scaleType="centerInside"
        android:src="@drawable/support_blue"
        android:text="@string/techSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/settingsIcon"
        android:scaleType="centerInside"
        android:src="@drawable/back_arrow"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:backgroundTint="@color/companyBlue"
        app:layout_constraintBottom_toBottomOf="@+id/textLanguageGreek"
        app:layout_constraintStart_toEndOf="@+id/textLanguageGreek"
        app:layout_constraintTop_toTopOf="@+id/textLanguageGreek"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:backgroundTint="@color/companyBlue"
        app:layout_constraintBottom_toBottomOf="@+id/textThemeDark"
        app:layout_constraintStart_toEndOf="@+id/textThemeDark"
        app:layout_constraintTop_toTopOf="@+id/textThemeDark" />

</androidx.constraintlayout.widget.ConstraintLayout>