<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/topLeft"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/stoveOn"
        android:fontFamily="sans-serif-medium"
        android:text="@string/number7"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/topRight"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/stoveOn"
        android:fontFamily="sans-serif-medium"
        android:text="@string/number9"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/topLeft"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/bottomLeft"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/stoveOff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/noNumber"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLeft" />

    <Button
        android:id="@+id/bottomRight"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/stoveOff"
        android:fontFamily="sans-serif-medium"
        android:text="@string/noNumber"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/bottomLeft"
        app:layout_constraintTop_toBottomOf="@+id/topRight"
        tools:ignore="VisualLintBounds" />



    <ImageButton
        android:id="@+id/settings"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/settingsIcon"
        android:scaleType="centerInside"
        android:src="@drawable/settings_blue"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/techSupport"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/techSupportIcon"
        android:scaleType="centerInside"
        android:src="@drawable/support_blue"
        android:text="@string/techSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        layout="@layout/content_main"
        android:layout_width="463dp"
        android:layout_height="389dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>