<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:backgroundTint="?android:backgroundTint"
        android:contentDescription="@string/settingsIcon"
        android:scaleType="centerInside"
        android:src="@drawable/back_arrow"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="30dp"
        android:text="@string/textSupport"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSupportStove"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/companyBlue"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="4dp"
        android:text="@string/stove"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textSupport" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSupportOven"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/companyBlue"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="4dp"
        android:text="@string/oven"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSupportStove"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/buttonSupportStove"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="481dp" />

</androidx.constraintlayout.widget.ConstraintLayout>